--- a/config/database.yml
+++ b/config/database.yml
@@ -2,12 +2,9 @@
 # PRODUCTION
 #
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
+  adapter: postgresql
+  encoding: unicode
   database: gitlabhq_production
   pool: 10
-  username: git
-  password: "secure password"
-  # host: localhost
-  # socket: /tmp/mysql.sock
+  #username: git
+  #password: "secure password"
