Try to let host nginx serve content

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -16,14 +16,15 @@
 # [2] https://github.com/agentzh/chunkin-nginx-module
 
 upstream gitlab {
-  server unix:/home/git/gitlab/tmp/sockets/gitlab.socket;
+  server unix:PATH_TO_GITLAB_DOCKER/data/tmp/sockets/gitlab.socket
 }
 
 server {
-  listen *:40080 default_server;         # e.g., listen 192.168.1.1:80; In most cases *:80 is a good idea
+  listen [::]:80;
+  listen 80;
   server_name YOUR_SERVER_FQDN;     # e.g., server_name source.example.com;
   server_tokens off;     # don't show the version number, a security best practice
-  root /home/git/gitlab/public;
+  root PATH_TO_GITLAB_DOCKER/data/gitlab/public;
 
   # Increase this if you want to upload large attachments
   # Or if you want to accept large git objects over http
@@ -60,7 +61,7 @@ server {
 
   # Enable gzip compression as per rails guide: http://guides.rubyonrails.org/asset_pipeline.html#gzip-compression
   location ~ ^/(assets)/  {
-    root /home/git/gitlab/public;
+    root PATH_TO_GITLAB_DOCKER/data/gitlab/public;
     gzip_static on; # to serve pre-gzipped version
     expires max;
     add_header Cache-Control public;
