--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -16,7 +16,7 @@
 # [2] https://github.com/agentzh/chunkin-nginx-module
 
 upstream gitlab {
-  server unix:PATH_TO_GITLAB_DOCKER/data/tmp/sockets/gitlab.socket
+  server unix:PATH_TO_GITLAB_DOCKER/data/tmp/sockets/gitlab.socket;
 }
 
 server {
